Content items now vertically and horizontally aligned to center, correcting problem with + sign

--- a/services/web/client/source/resource/qxapp/gridsterjs/jquery.gridster.osparc.css
+++ b/services/web/client/source/resource/qxapp/gridsterjs/jquery.gridster.osparc.css
@@ -29,6 +29,8 @@
   filter: invert(85%);
   flex: 1;
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 5px;
 }
 .gs-resize-handle-both {
